// Extracted from: Spotify 1.2.52.442 (windows)

syntax = "proto3";

package spotify.player.esperanto.proto;

option objc_class_prefix = "ESP";
option optimize_for = CODE_SIZE;
option java_package = "com.spotify.player.esperanto.proto";

message ResponseWithReasons {
    enum Error {
        OK = 0;
        FORBIDDEN = 1;
        NOT_FOUND = 2;
        CONFLICT = 3;
    }

    Error error = 1;
    string reasons = 2;
}
