// Extracted from: Spotify 1.1.33.569 (Windows)

syntax = "proto3";

package spotify.remote_config.proto;

option optimize_for = CODE_SIZE;

message ResolveConfigurationError {
    string error_message = 1;
    int64 status_code = 2;
    string client_id = 3;
    string client_version = 4;
}
