// Extracted from: Spotify 1.2.52.442 (windows)

syntax = "proto3";

package spotify.stream_reporting_esperanto.proto;

option objc_class_prefix = "ESP";
option java_package = "com.spotify.stream_reporting_esperanto.proto";

enum StatusCode {
    INVALID_STATUS_CODE = 0;
    SUCCESS = 1;
    EVENT_SENDER_ERROR = 2;
    INVALID_STREAM_HANDLE = 3;
    PENDING_EVENTS_ERROR = 4;
    IGNORED = 5;
}
